Update Java dynamic loader